[gd_scene load_steps=4 format=2]

[ext_resource path="res://HoverPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Card.tscn" type="PackedScene" id=3]
[ext_resource path="res://ChoiceUI.gd" type="Script" id=4]

[node name="ChoiceUI" type="Node2D"]
script = ExtResource( 4 )

[node name="StartingSuitChoice" type="Node2D" parent="."]
visible = false

[node name="Card1" parent="StartingSuitChoice" groups=["choices"] instance=ExtResource( 3 )]
position = Vector2( 110, 90 )
card_id = "001"

[node name="Card2" parent="StartingSuitChoice" groups=["choices"] instance=ExtResource( 3 )]
position = Vector2( 175, 90 )
card_id = "014"

[node name="Card3" parent="StartingSuitChoice" groups=["choices"] instance=ExtResource( 3 )]
position = Vector2( 240, 90 )
card_id = "027"

[node name="Card4" parent="StartingSuitChoice" groups=["choices"] instance=ExtResource( 3 )]
position = Vector2( 305, 90 )
card_id = "040"

[node name="RewardCardChoice" type="Node2D" parent="."]
visible = false

[node name="Reward1" parent="RewardCardChoice" groups=["choices"] instance=ExtResource( 3 )]
position = Vector2( 142, 90 )
card_id = "001"

[node name="Reward2" parent="RewardCardChoice" groups=["choices"] instance=ExtResource( 3 )]
position = Vector2( 207, 90 )
card_id = "001"

[node name="Reward3" parent="RewardCardChoice" groups=["choices"] instance=ExtResource( 3 )]
position = Vector2( 272, 90 )
card_id = "001"

[node name="HoverPanel" parent="." instance=ExtResource( 2 )]
